--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,5 +5,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: ls ${{ github.workspace }}
-      - run: git clone git@github.com:WordPress/WordPress.git
+      - run: git clone -b master --single-branch --depth 1 https://github.com/WordPress/WordPress.git 
       - run: ls ${{ github.workspace }}
